@@ -1,7 +1,12 @@
 Revision history for Fork-Event-Interval
 
 1.03 UNREL
-    -
+    - Added events() class function, returns hash reference details of each
+      event that's been created
+    - Added id() object method; returns the ID of the event
+    - Added info() object method; returns an href of details about the event
+    - Added shared_scalar() object method; Returns a reference to a scalar
+      that resides in shared memory. We use IPC::Shareable for the backend
 
 1.02    2021-04-15
     - Updated shared data example to be a scalar
